--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^1.0.0-beta.28",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
+    "pubsub-js": "^1.5.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
