--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,10 +1,11 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: app/components
+  source_path: app/frontend
   source_entry_path: packs
   public_output_path: packs
   cache_path: tmp/cache/webpacker
+
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
   resolved_paths: []
