--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.5.8",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.0"
