--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,13 @@
       {
         "modules": false,
         "targets": {
-          "browsers": "> 1%",
+          "browsers": [
+            "Chrome >= 59",
+            "FireFox >= 44",
+            "Safari >= 7",
+            "Explorer 11",
+            "last 4 Edge versions"
+          ],
           "uglify": true
         },
         "useBuiltIns": true
@@ -21,6 +27,7 @@
       {
         "spec": true
       }
-    ]
+    ],
+    ["transform-es2015-arrow-functions", { "spec": true }]
   ]
 }
