--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "material-ui": "^1.0.0-beta.28",
