--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.28",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "reactstrap": "^4.8.0",
     "webpack-manifest-plugin": "^1.3.2"
   },
   "devDependencies": {
