--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vso",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "@rails/webpacker": "^3.2.0",
     "axios": "^0.17.1",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
@@ -9,12 +12,13 @@
     "coffeescript": "1.12.7",
     "es6-promise": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^1.0.0-beta.28",
+    "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-table": "^6.7.6",
     "reactstrap": "^4.8.0",
     "webpack-manifest-plugin": "^1.3.2"
   },
