--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<!--<artifactId>ojdbc8</artifactId>-->
 			<!--<version>12.2.0.1</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
