--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>juli</artifactId>
+			<version>6.0.53</version>
+		</dependency>
 	</dependencies>
 
 	<build>
