--- a/config/database.yml
+++ b/config/database.yml
@@ -5,39 +5,20 @@
 # gem 'activerecord-jdbcsqlite3-adapter'
 #
 default: &default
-  adapter: oracle_enhanced
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 1000 } %>
-  database: xe
-  reaping_frequency: 10
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  username: rails_development
-  password: rails
+  database: db/development.sqlite3
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  username: rails_development
-  password: rails
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  username: rails_development
-  password: rails
-
-
-  # create a user in oracle:
-  #create user rails_development
-  #IDENTIFIED BY rails;
-  #grant create session to rails_development;
-  #GRANT all PRIVILEGES to rails_development;
-
-  # to change your password in dev box
-  # cd C:\work\oracle\oraclexe\app\oracle\product\11.2.0\server\bin
-  # sqlplus /nolog
-  # SQL> connect /as sysdba
-  # SQL> alter user rails_development identified by  "rails";
-  # SQL> alter user SYS identified by  "rails";
-  # ALTER USER rails_development IDENTIFIED BY "rails" ACCOUNT UNLOCK;
+  database: db/production.sqlite3
