--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pubsub-js": "^1.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-material-ui-form-validator": "^2.0.0-beta.4",
     "react-table": "^6.7.6",
     "reactstrap": "^4.8.0",
     "webpack-manifest-plugin": "^1.3.2"
